--- a/frontend/src/app/features/auth/components/login/login.component.html
+++ b/frontend/src/app/features/auth/components/login/login.component.html
@@ -40,5 +40,10 @@
         </div>
       </div>
     </div>
+    <!-- Right Section -->
+    <div class="col-md-6 p-0 d-none d-md-block">
+      <img src="https://images.unsplash.com/photo-1556745753-b2904692b3cd?q=80&w=1973&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" 
+           class="img-fluid w-100 h-100" alt="Working Woman" style="object-fit: cover;">
+    </div>
   </div>
 </div>
