--- a/frontend/src/app/features/dashboard/components/navbar/navbar.component.html
+++ b/frontend/src/app/features/dashboard/components/navbar/navbar.component.html
@@ -1,18 +1,84 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<!--<nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">Dashboard</a>
       <div class="ms-auto d-flex align-items-center">
-        <!-- User Thumbnail -->
-        <img 
-          [src]="thumbnail" 
-          alt="User Thumbnail" 
-          class="rounded-circle me-2" 
-          width="40" 
-          height="40"
-        >
-        <!-- Username -->
-        <span>{{ username }}</span>
+        <div class="dropdown ms-3">
+          <button 
+            class="btn btn-secondary dropdown-toggle d-flex align-items-center" 
+            type="button" 
+            id="userDropdown" 
+            data-bs-toggle="dropdown" 
+            aria-expanded="false"
+          >
+            <img 
+              [src]="thumbnail" 
+              alt="User Thumbnail" 
+              class="rounded-circle me-2" 
+              width="30" 
+              height="30"
+            >
+            <span>{{ username }}</span>
+          </button>
+          <ul class="dropdown-menu" aria-labelledby="userDropdown">
+            <li><a class="dropdown-item" href="#">Upload Profile Photo</a></li>
+            
+            <li><a class="dropdown-item" (click)="logout()">Logout</a></li>
+          </ul>
+        </div>
       </div>
     </div>
-  </nav>
+  </nav>-->
   
+
+
+
+
+  <!-- Navbar HTML (with modal added) -->
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#">Dashboard</a>
+    <div class="ms-auto d-flex align-items-center">
+      <div class="dropdown ms-3">
+        <button 
+          class="btn btn-secondary dropdown-toggle d-flex align-items-center" 
+          type="button" 
+          id="userDropdown" 
+          data-bs-toggle="dropdown" 
+          aria-expanded="false"
+        >
+          <img 
+            [src]="thumbnail" 
+            alt="User Thumbnail" 
+            class="rounded-circle me-2" 
+            width="30" 
+            height="30"
+          >
+          <span>{{ username }}</span>
+        </button>
+        <ul class="dropdown-menu" aria-labelledby="userDropdown">
+          <li><a class="dropdown-item" (click)="openModal()">Upload Profile Photo</a></li>
+          <li><a class="dropdown-item" (click)="logout()">Logout</a></li>
+        </ul>
+      </div>
+    </div>
+  </div>
+</nav>
+
+<!-- Modal for file upload -->
+<div class="modal fade" id="uploadModal" tabindex="-1" aria-labelledby="uploadModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="uploadModalLabel">Upload Profile Photo</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <input type="file" (change)="onFileSelected($event)" />
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+        <button type="button" class="btn btn-primary" (click)="uploadProfilePhoto()">Upload</button>
+      </div>
+    </div>
+  </div>
+</div>
