--- a/frontend/src/app/features/dashboard/components/navbar/navbar.component.html
+++ b/frontend/src/app/features/dashboard/components/navbar/navbar.component.html
@@ -47,7 +47,7 @@
           aria-expanded="false"
         >
           <img 
-            [src]="thumbnail" 
+            [src]="profile_pic" 
             alt="User Thumbnail" 
             class="rounded-circle me-2" 
             width="30" 
