--- a/frontend/src/app/features/dashboard/components/dashboard.component.html
+++ b/frontend/src/app/features/dashboard/components/dashboard.component.html
@@ -80,8 +80,8 @@
             </td>
             <td>
               <!-- Available or Sold Out status with colored boxes -->
-              <span *ngIf="product.product_status === 1" class="badge bg-success text-white">Available</span>
-              <span *ngIf="product.product_status !== 1" class="badge bg-light text-dark">Sold Out</span>
+              <span *ngIf="product.quantity_in_stock >= 1" class="badge bg-success text-white">Available</span>
+              <span *ngIf="product.quantity_in_stock <= 0" class="badge bg-light text-dark">Sold Out</span>
             </td>
             <td>{{ product.category_name }}</td>
             <td>
@@ -163,6 +163,24 @@
                 </tr>
               </tbody>
             </table>
+            <!-- Pagination -->
+      <nav aria-label="Page navigation" class="mt-3">
+        <ul class="pagination justify-content-center">
+          <li class="page-item" [class.disabled]="currentCartPage === 1">
+            <a class="page-link" (click)="fetchCartPage(currentCartPage - 1)" aria-label="Previous">
+              <span aria-hidden="true">&laquo;</span>
+            </a>
+          </li>
+          <li class="page-item" *ngFor="let page of cartPages" [class.active]="page === currentCartPage">
+            <a class="page-link" (click)="fetchCartPage(page)">{{ page }}</a>
+          </li>
+          <li class="page-item" [class.disabled]="currentCartPage === totalCartPages">
+            <a class="page-link" (click)="fetchCartPage(currentCartPage + 1)" aria-label="Next">
+              <span aria-hidden="true">&raquo;</span>
+            </a>
+          </li>
+        </ul>
+      </nav>
           </div>
 
 
@@ -277,7 +295,7 @@
               </tr>
             </thead>
             <tbody>
-              <tr *ngFor="let product of products">
+              <tr *ngFor="let product of selectedProducts">
                 <td>
                   <!-- Checkbox to select a product -->
                   <input type="checkbox" class="form-check-input" [(ngModel)]="product.isSelected" />
@@ -310,28 +328,11 @@
             </tbody>
           </table>
 
-          <!-- Pagination for Move To Modal -->
-          <nav aria-label="Page navigation" class="mt-3">
-            <ul class="pagination justify-content-center">
-              <li class="page-item" [class.disabled]="currentPage === 1">
-                <a class="page-link" (click)="fetchPage(currentPage - 1)" aria-label="Previous">
-                  <span aria-hidden="true">&laquo;</span>
-                </a>
-              </li>
-              <li class="page-item" *ngFor="let page of pages" [class.active]="page === currentPage">
-                <a class="page-link" (click)="fetchPage(page)">{{ page }}</a>
-              </li>
-              <li class="page-item" [class.disabled]="currentPage === totalPages">
-                <a class="page-link" (click)="fetchPage(currentPage + 1)" aria-label="Next">
-                  <span aria-hidden="true">&raquo;</span>
-                </a>
-              </li>
-            </ul>
-          </nav>
+          
         </div>
         <div class="modal-footer">
           <!-- Cancel and Move Buttons -->
-          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" (click)="clearSelectedProducts()">Cancel</button>
           <button type="button" class="btn btn-primary" (click)="moveSelectedProducts()">
             Move
           </button>
