intable delete done for inventory table

--- a/frontend/src/app/features/dashboard/components/dashboard.component.html
+++ b/frontend/src/app/features/dashboard/components/dashboard.component.html
@@ -101,7 +101,7 @@
               <button class="btn btn-sm me-2" style="border: none; background: transparent;">
                 <i class="bi bi-pencil"></i>
               </button>
-              <button class="btn btn-sm" style="border: none; background: transparent;">
+              <button class="btn btn-sm" style="border: none; background: transparent;" (click)="onDeleteProduct(product)">
                 <i class="bi bi-trash"></i>
               </button>
             </td>
