imported excel file and updated database

--- a/frontend/src/app/features/dashboard/components/dashboard.component.html
+++ b/frontend/src/app/features/dashboard/components/dashboard.component.html
@@ -24,7 +24,8 @@
           <button class="btn btn-outline-primary me-2" (click)="downloadAllSelected()">
             <i class="bi bi-download"></i> Download All
           </button>
-          <button class="btn btn-outline-primary me-2">
+          <!-- Import Button -->
+          <button class="btn btn-outline-primary me-2" data-bs-toggle="modal" data-bs-target="#importModal">
             <i class="bi bi-upload"></i> Import
           </button>
           <button class="btn btn-primary me-2" data-bs-toggle="modal" data-bs-target="#addProductModal">
@@ -397,5 +398,24 @@
     </div>
   </div>
 
+
+    <!-- Modal -->
+<div class="modal fade" id="importModal" tabindex="-1" aria-labelledby="importModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="importModalLabel">Import Products</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <input type="file" id="excelFile" (change)="onFileChange($event)" class="form-control" accept=".xlsx, .xls" />
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+        <button type="button" class="btn btn-primary" (click)="uploadData()">Upload</button>
+      </div>
+    </div>
+  </div>
+</div>
 
 </div>
